fixed titles that are too long

--- a/source/assets/styles/recipePage.css
+++ b/source/assets/styles/recipePage.css
@@ -225,6 +225,7 @@ form.example i {
 .recImg {
   width: 350px;
   height: 350px;
+  margin-top: 10%;
   box-shadow: 15px 15px 9px 0 #505050;
 }
 
